--- a/index.css
+++ b/index.css
@@ -1,3 +1,14 @@
+body {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    height: 100vh;
+    margin: 0;
+    background: url(https://source.unsplash.com/random/1600x900);
+    background-size:cover;
+}
+
 .form, .greetings {
     display: none;
 }
