--- a/index.css
+++ b/index.css
@@ -5,6 +5,7 @@ body {
     justify-content: center;
     height: 100vh;
     margin: 0;
+    font-family: 'Nanum Gothic', sans-serif;
     background: url(https://source.unsplash.com/random/1600x900);
     background-size:cover;
 }
