--- a/index.css
+++ b/index.css
@@ -10,10 +10,33 @@ body {
     background-size:cover;
 }
 
-.form, .greetings {
-    display: none;
+.js-form {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
-.showing {
-    display: block;
+.form span {
+    font-size: 40px;
+    font-weight: 600;
+    color: white;
+}
+
+.form input {
+    margin-top: 15px;
+    background: transparent;
+    border: 0;
+    border-bottom: 3px solid white;
+    font-size: 40px;
+    font-weight: 700;
+    color: white;
+    text-align: center;
+}
+
+.form input:focus {
+    outline: 0;
+}
+
+.hide {
+    display: none;
 }
