--- a/index.css
+++ b/index.css
@@ -10,14 +10,27 @@ body {
     background-size:cover;
 }
 
-.js-form {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+h1, h2, h3, h4, h5, h6 {
+    margin: 0;
+    color: white;
+}
+
+.clock {
+    font-size: 60px;
+}
+
+.greetings {
+    font-size: 40px;
 }
 
 .transition {
     transition: all 1s linear;
+}
+
+.form {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 .form span {
