--- a/index.css
+++ b/index.css
@@ -54,6 +54,49 @@ h1, h2, h3, h4, h5, h6 {
     outline: 0;
 }
 
+.to-do-form {
+    margin-top: 80px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.to-do-form span {
+    font-size: 30px;
+    font-weight: 600;
+    color: white;
+}
+
+.to-do-form input {
+    background: transparent;
+    border: 0;
+    border-bottom: 2px solid white;
+    font-size: 40px;
+    color: white;
+    text-align: center;
+}
+
+.to-do-form input:focus {
+    outline: 0;
+}
+
+.to-do-list {
+    margin: 20px 0 0;
+    padding: 0;
+    list-style:none;
+}
+
+.to-do-list li {
+    display: flex;
+    align-items: center;
+    font-size: 30px;
+    color: white;
+}
+
+.to-do-list li button {
+    margin-right: 10px;
+}
+
 .hide {
     display: none;
 }
